# ReadySetDone

./: .gitignore  .readthedocs.yaml  Makefile  hello.py  pyproject.toml  tasks.json
conf/: config.toml
docs/: architecture.rst  conf.py  index.rst
docs/modules/: api.rst  daemon.rst  pubsub.rst  service.rst
src/rsd/: __init__.py  argps.py
src/rsd/api/: __init__.py  deserialize.py  interface.py  serialize.py  sorting.py  task.py  types.py
src/rsd/cmd/: rsd.py  rsdd.py
src/rsd/config/: __init__.py  args.py  config.py
src/rsd/fs/: locked_file.py
src/rsd/ipc/: __init__.py  interface.py
src/rsd/ipc/dbus/: __init__.py  constants.py  dbus_client.py  dbus_server.py
src/rsd/logger/: __init__.py  plain_logger.py  rich_logger.py  utils.py
src/rsd/pubsub/: __init__.py  dbus_pubsub.py  topics.py
src/rsd/service/: __init__.py  task_service.py
src/rsd/service/store/: __init__.py  description_store.py  task_store.py
src/rsd/ui/: __init__.py  sorting.py  ui.py
src/rsd/ui/cli/: __init__.py  cli.py  plain_cli.py  rich_cli.py
src/rsd/ui/tui/: __init__.py  textual_tui.py  tui.py
