[project]
name = "readysetdone"
version = "0.1.0"
description = "Terminal-based todo app with TUI and CLI support"
readme = "README.md"
authors = [{ name = "David Kristiansen", email = "david@kristiansen.tech" }]
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "anyio>=4.0.0",
    "dbus-next>=0.2.3",
    "rich>=14.0.0",
]

[tool.uv]
package = true

[project.scripts]
rsd = "rsd.cmd.rsd:main"
rsdd = "rsd.cmd.rsdd:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
]
docs = [
    "sphinx>=7.2.6",
    "myst-parser>=2.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-rtd-dark-mode>=1.2.4",
]
rich = ["rich>=13.7"]
textual = ["textual>=0.60"]
dbus = ["dbus-next>=0.2.3"]
cli = ["typer>=0.12.0"]
tui = ["textual>=0.60", "rich>=13.7"]

[tool.ruff]
fix = true
# format = true
extend-include = ["*.py"]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
fixable = ["F401", "F841" ,"I" , "RUF022", "E501"]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
